Fix border clipping

--- a/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
@@ -9,10 +9,9 @@
 .editable-select {
   @extend .asset-element;
   margin: 0;
-  border: $s-1 solid var(--input-border-color);
   position: relative;
   display: flex;
-  height: $s-32;
+  height: calc($s-32 - 2px); // Fixes border being clipped by the input field
   width: 100%;
   padding: $s-8;
   border-radius: $br-8;
